--- a/style.css
+++ b/style.css
@@ -23,3 +23,53 @@ body {
     display: flex;
     flex-direction: column;
   }
+
+  input[type="number"],
+  select,
+  button,
+  input[type="text"] {
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    transition: border-color 0.3s ease; /* Smooth transition for input focus */
+  }
+  
+  input[type="number"]:focus,
+  select:focus,
+  button:focus,
+  input[type="text"]:focus {
+    outline: none;
+    border-color: #007bff; /* Blue border color on focus */
+  }
+  button {
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 12px 20px;
+    font-size: 16px;
+    transition: background-color 0.3s ease; /* Smooth transition for button hover */
+  }
+  
+  button:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+  }
+  
+  p#result {
+    margin-top: 15px;
+    font-weight: bold;
+    text-align: center;
+    color: #333; /* Dark gray result text color */
+  }
+  
+  #searchInput,
+  #customCurrencyInput {
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
