--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* styles.css */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -19,11 +20,12 @@ body {
     color: #333; /* Dark gray heading color */
     margin-bottom: 30px; /* Add spacing below the heading */
   }
+  
   .converter {
     display: flex;
     flex-direction: column;
   }
-
+  
   input[type="number"],
   select,
   button,
@@ -43,6 +45,7 @@ body {
     outline: none;
     border-color: #007bff; /* Blue border color on focus */
   }
+  
   button {
     cursor: pointer;
     background-color: #007bff;
@@ -73,7 +76,7 @@ body {
     border-radius: 4px;
     font-size: 16px;
   }
-
+  
   #addCurrencyBtn {
     cursor: pointer;
     background-color: #28a745; /* Green add button color */
@@ -87,9 +90,8 @@ body {
   
   #addCurrencyBtn:hover {
     background-color: #218838; /* Darker green on hover */
-
   }
-
+  
   /* Linear gradient background */
   body {
     background: linear-gradient(to bottom right, #4e54c8, #8f94fb); /* Gradient from purple to blue */
